tests/ui/failed_attribute_parsing.stderr
error: proc-macro derive panicked
 --> tests/ui/failed_attribute_parsing.rs:3:10
  |
3 | #[derive(QueryParams)]
  |          ^^^^^^^^^^^
  |
  = help: message: Unsupported attribute found in #[query(...)] attribute: Error("unexpected token in nested attribute, expected ident")
